# pdfsizeopt

./: mksingle.py  pdfsizeopt_test.py  pyproject.toml
extra/: dvipdfmx_fontfix.py
lib/pdfsizeopt/: cff.py  float_util.py  main.py  pdfsizeopt_argparse.py  psproc.py
