[tool.poetry]
name = "pdfsizeopt"
version = "1.0.0"
description = "PDF file size optimizer"
authors = ["Péter Szabó <pts@fazekas.hu>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/pts/pdfsizeopt"
keywords = ["pdf", "optimization", "compression"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
]
packages = [{ include = "pdfsizeopt", from = "lib" }]
include = ["pdfsizeopt.single"]

[tool.poetry.dependencies]
python = "^3.10"
future = "^0.18.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.259"
black = "^23.3.0"
mypy = "^1.1.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pts/pdfsizeopt/issues"
"Donations" = "https://flattr.com/submit/auto?user_id=pts"

[tool.ruff]
select = ["E", "F"]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
